--- a/style.css
+++ b/style.css
@@ -6,10 +6,6 @@ body {
     font-family: 'Inconsolata', sans-serif;
 }
 
-/* main {
-    
-} */
-
 section[aria-label="hero-home"] {
     width: 100%;
     height: 60rem;
@@ -37,7 +33,7 @@ section[aria-label="hero-home"] {
     width: 25%;
     min-width: 35rem;
     max-width: 40rem;
-    margin: 0 auto;    
+    margin: 0 auto;
 }
 
 .menu {
@@ -111,19 +107,19 @@ section[aria-label="hero-home"] {
 .hero-front-img {
     position: relative;
     width: 50%;
-    background: no-repeat center url(./Assets/Icons/playButton.svg);    
+    background: no-repeat center url(./Assets/Icons/playButton.svg);
 }
 
 .hero-front-img-text {
     width: 70%;
     margin-left: auto;
-    display: flex;    
+    display: flex;
     position: absolute;
     bottom: 2.5%;
     right: 25%;
 }
 
-.hero-front-img-text > img {
+.hero-front-img-text>img {
     width: 100px;
 }
 
@@ -136,8 +132,8 @@ section[aria-label="hero-home"] {
 
 section[aria-label="hero-games"] {
     width: 100%;
-    height: 120rem;
     color: #000;
+    padding-bottom: 10rem;
 }
 
 .hero-games {
@@ -169,12 +165,14 @@ section[aria-label="hero-games"] {
     width: 50%;
     margin-left: 1rem;
 }
+
 .download {
     width: 50%;
 }
+
 .download-btn {
-    padding: 1rem 1.5rem;
-    font-weight: 500;
+    padding: 1rem 2rem;
+    font-weight: 700;
     font-size: 1.25rem;
     background-color: #F4694C;
     color: #fff;
@@ -182,10 +180,12 @@ section[aria-label="hero-games"] {
     position: relative;
     top: 2.25rem;
 }
+
 .game-box1 {
     background: no-repeat center url(./Assets/Photos/image\ 2.png);
     background-size: 100% 100%;
 }
+
 .game-content {
     width: 100%;
     height: 8rem;
@@ -194,6 +194,7 @@ section[aria-label="hero-games"] {
     backdrop-filter: blur(10px);
     display: flex;
 }
+
 .game-box2 {
     background: no-repeat center url(./Assets/Photos/image\ 4.png);
     background-size: 100% 100%;
@@ -208,6 +209,7 @@ section[aria-label="hero-games"] {
     background: no-repeat center url(./Assets/Photos/Rectangle\ 56.png);
     background-size: 100% 100%;
 }
+
 .hero-games-container3 {
     padding-top: 7rem;
     width: 100%;
@@ -217,30 +219,148 @@ section[aria-label="hero-games"] {
 
 .bg-game-img {
     width: 49%;
-    background: no-repeat center url(./Assets/Photos/Rectangle\ 57.png) ;
+    background: no-repeat center url(./Assets/Photos/Rectangle\ 57.png);
     margin-right: auto;
 }
+
 .bg-game-text {
     width: 47%;
 }
+
 .hero-bg-heading {
     font-weight: 900;
     font-size: 4rem;
     margin: 0 auto;
     padding: 2.5rem 0;
 }
+
 .hero-bg-description {
     font-weight: 600;
     font-size: 1.5rem;
     margin: 0 auto;
     padding-bottom: 3rem;
 }
+
 .btn4 {
     background-color: #fff;
     border: 2px solid #F4694C;
     color: #F4694C;
 }
+
 .bg-button {
     position: relative;
     top: 1rem;
+}
+
+.hero-games-container4 {
+    width: 100%;
+    padding-top: 7rem;
+    position: relative;
+}
+
+.games-of-the-week {
+    margin-top: 3rem;
+}
+
+.weekly-games {
+    display: flex;
+}
+
+.weekly-games-heading {
+    width: 60%;
+    margin-right: auto;
+    position: relative;
+    margin-right: auto;
+}
+
+.weekly-games-heading>h1 {
+    font-weight: 700;
+    font-size: 4rem;
+    text-align: left;
+    margin: 0;
+}
+
+.next-container {
+    width: 20%;
+    position: relative;
+}
+
+.arrow-container {
+    display: flex;
+    position: absolute;
+    top: 1.5rem;
+    right: 0;
+}
+
+.left-arrow {
+    height: 80px;
+    width: 80px;
+    background: no-repeat center/50% url(./Assets/Icons/leftArrow.svg);
+    background-color: #e6c2bc;
+    margin-right: 1rem;
+}
+
+.right-arrow {
+    height: 80px;
+    width: 80px;
+    background: no-repeat center/50% url(./Assets/Icons/rightArrow.svg);
+    background-color: #F4694C;
+}
+
+.conainer {
+    display: flex;
+    width: 100%;
+}
+
+.sub-div {
+    width: 47%;
+    min-height: 25rem;
+    margin-right: auto;
+    display: flex;
+    margin-bottom: 3rem;
+}
+
+h2 {
+    font-weight: 700;
+    font-size: 2.5rem;
+}
+
+.sub-img {
+    width: 50%;
+}
+
+.img1 {
+    background: no-repeat center url(./Assets/Photos/Rectangle\ 75.png);
+    background-size: 100% 100%;
+}
+
+.img2 {
+    background: no-repeat center url(./Assets/Photos/Rectangle\ 76.png);
+    background-size: 100% 100%;
+}
+
+.img3 {
+    background: no-repeat center url(./Assets/Photos/Rectangle\ 77.png);
+    background-size: 100% 100%;
+}
+
+.img4 {
+    background: no-repeat center url(./Assets/Photos/Rectangle\ 78.png);
+    background-size: 100% 100%;
+}
+
+.sub-text-div {
+    width: 50%;
+
+    margin-left: 2rem;
+}
+
+.game-genre {
+    font-weight: 600;
+    font-size: 1.5rem;
+    color: #F4694C;
+}
+
+section[aria-label="most-played-games"] {
+    width: 100%;
 }
