--- a/style.css
+++ b/style.css
@@ -355,6 +355,10 @@ h2 {
     margin-left: 2rem;
 }
 
+button {
+    cursor: pointer;
+}
+
 .game-genre {
     font-weight: 600;
     font-size: 1.5rem;
