--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ section[aria-label="hero-games"] {
 
 .bg-game-img {
     width: 49%;
-    background: no-repeat center url(./Assets/Photos/Rectangle\ 57.png);
+    background: no-repeat center url(https://raw.githubusercontent.com/sunandasamanta/fsjsproject-six/main/Assets/Photos/Rectangle%2057.png);
     margin-right: auto;
 }
 
