--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
     margin: 0;
+    background-color: #000;
     color: #fff;
     font-family: 'Inconsolata', sans-serif;
 }
@@ -131,6 +132,7 @@ section[aria-label="hero-home"] {
 }
 
 section[aria-label="hero-games"] {
+    background-color: #fff;
     width: 100%;
     color: #000;
     padding-bottom: 10rem;
@@ -143,10 +145,15 @@ section[aria-label="hero-games"] {
 
 .hero-games-container1 {
     width: 70%;
-    margin: 7rem auto;
+    margin: 0 auto;
+}
+
+.hero-games-container1>h1 {
+    margin: 0;
     text-align: center;
     font-weight: 700;
-    font-size: 3.5rem;
+    font-size: 5rem;
+    padding: 5rem 0;
 }
 
 .hero-games-container2 {
@@ -219,7 +226,7 @@ section[aria-label="hero-games"] {
 
 .bg-game-img {
     width: 49%;
-    background: no-repeat center url(https://raw.githubusercontent.com/sunandasamanta/fsjsproject-six/main/Assets/Photos/Rectangle%2057.png);
+    background: no-repeat center url(./Assets/Photos/Rectangle\ 57.png);
     margin-right: auto;
 }
 
@@ -317,7 +324,11 @@ section[aria-label="hero-games"] {
     min-height: 25rem;
     margin-right: auto;
     display: flex;
-    margin-bottom: 3rem;
+    margin-bottom: 4rem;
+}
+
+.sub-div:nth-child(even) {
+    margin-right: 0;
 }
 
 h2 {
@@ -349,14 +360,13 @@ h2 {
     background-size: 100% 100%;
 }
 
-.sub-text-div {
-    width: 50%;
-
-    margin-left: 2rem;
-}
-
 button {
     cursor: pointer;
+}
+
+.sub-text-div {
+    width: 50%;
+    margin-left: 2rem;
 }
 
 .game-genre {
@@ -367,4 +377,170 @@ button {
 
 section[aria-label="most-played-games"] {
     width: 100%;
+    min-height: 70rem;
+    background: no-repeat center url(./Assets/Icons/GAMES\ OF\ THE\ WORLD.svg);
+    background-position: top 45% right 0%;
+    margin: 0;
+}
+
+.mp-game-heading {
+    font-weight: 900;
+    font-size: 4.5rem;
+    text-align: center;
+    width: 50%;
+    margin: 0 auto;
+    padding: 5rem 0;
+}
+
+.most-played-games {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.mp-games-img {
+    display: flex;
+    width: 100%;
+}
+
+.mpg-sub {
+    width: 40%;
+    margin-right: auto;
+    background: no-repeat center url(./Assets/Photos/Rectangle\ 17.png);
+    background-size: 90% 80%;
+}
+
+.mpg-sub2 {
+    width: 57%;
+}
+
+.mpg-description {
+    font-weight: 500;
+    font-size: 1.5rem;
+    text-align: left;
+    margin: 0;
+    padding: 2rem 0;
+}
+
+img[alt="gm-img"] {
+    width: 36rem;
+}
+
+.mpg-imgages {
+    width: 100%;
+    display: flex;
+    position: relative;
+    padding-top: 2rem;
+}
+
+.gm-img1 {
+    width: 51%;
+    background: no-repeat center url(./Assets/Photos/Rectangle\ 18.png);
+    background-size: 100% 100%;
+    margin-right: auto;
+}
+
+.gm-img2 {
+    width: 47%;
+    height: 500px;
+    background: no-repeat center bottom url(./Assets/Photos/Rectangle\ 90.png);
+    background-size: 100% 50%;
+}
+
+section[aria-label="hero-footer"] {
+    width: 100%;
+}
+
+.hero-footer {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.hero-footer>article {
+    width: 100%;
+    min-height: 32rem;
+    background: no-repeat center linear-gradient(to bottom, rgba(0, 0, 0, 0.73), rgba(0, 0, 0, 0.52)), url(./Assets/Photos/Rectangle\ 606.png);
+    background-size: 100%;
+    margin-bottom: 5rem;
+}
+
+.hero-footer-heading {
+    width: 50%;
+    font-weight: 800;
+    font-size: 4.5rem;
+    margin: 0 auto;
+    padding-top: 6rem;
+    padding-bottom: 3rem;
+}
+
+.hero-footer-description {
+    width: 50%;
+    margin: 0 auto;
+    font-weight: 400;
+    font-size: 1.5rem;
+}
+
+.f-btn {
+    position: relative;
+    top: 1rem;
+    margin: 4rem 0;
+}
+
+.footer {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+}
+
+.footer-logos {
+    width: 20%;
+}
+
+img[alt="f-logo"] {
+    padding-top: 2rem;
+}
+
+.game-footer-text {
+    font-weight: 500;
+    font-size: 1.25rem;
+}
+
+.socials {
+    margin-right: 1rem;
+}
+
+.fbar {
+    display: flex;
+    width: 80%;
+    margin-bottom: 3rem;
+}
+
+.footer-list {
+    list-style: none;
+    width: 25%;
+}
+
+.list-head {
+    font-weight: 500;
+    font-size: 2rem;
+    margin: 0 auto;
+}
+
+.other {
+    font-weight: 400;
+    font-size: 1.5rem;
+    margin: 1.5rem 0;
+    color: rgb(163, 159, 159);
+}
+
+hr {
+    margin: 0;
+    border-color: darkslategrey;
+}
+
+.empty-fbar {
+    background-color: #11111e;
+    height: 10vh;
+    min-height: 100px;
+    margin: 0;
 }
